// Copyright 2025 Antrea Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "pkg/apis/flow/v1alpha1/flow.proto";

package antrea_io.antrea.pkg.apis.flow.v1alpha1;

option go_package = "pkg/apis/flow/v1alpha1";

service FlowExportService {
  rpc Export(stream ExportRequest) returns (ExportResponse);
}

message ExportRequest {
  repeated Flow flows = 1;
}

message ExportResponse {
}
